--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "pm2 start index.js",
+    "restart": "pm2 restart all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
